--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/NguyenTheTan/FunixReactJS/issues"
   },
-  "homepage": "https://github.com/NguyenTheTan/FunixReactJS#readme"
+  "homepage": "https://github.com/NguyenTheTan/FunixReactJS#readme",
+  "dependencies": {
+    "dateformat": "^5.0.2"
+  }
 }
