--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^8.2.3",
     "bootstrap": "^4.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
