--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.2.3",
     "bootstrap": "^4.0.0",
+    "format-decimal": "^0.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-popper": "^0.9.2",
