--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,15 +7,19 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
     "dateformat": "^5.0.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-popper": "^0.9.2",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
