--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "dateformat": "^5.0.2",
     "font-awesome": "^4.7.0",
     "format-decimal": "^0.1.0",
+    "prop-types": "^15.6.0",
     "react": "^16.3.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.3.2",
     "react-popper": "^0.9.2",
     "react-redux": "^7.2.6",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^2.3.0",
     "reactstrap": "^5.0.0",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
